[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belmonte-tools"
version = "0.1.0"
description = "CLI de manutencao do Windows para a Belmonte Audiovisual"
requires-python = ">=3.10"
readme = "MIGRATION_PLAN.md"
license = {text = "Proprietary"}
authors = [{name = "Belmonte Audiovisual"}]
dependencies = ["rich>=13.0"]

[project.scripts]
belmonte-tools = "belmonte_tools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

